Add ReverseProxy configs into appsettings in Scheduling.BlazorClient.Server #25

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -45,11 +45,46 @@
   },
   "ReverseProxy": {
     "Routes": {
+      "SchedulingAccessToken": {
+        "ClusterId": "SchedulingAccessTokenCluster",
+        "Match": {
+          "Path": "/sat/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/sat"
+          }
+        ],
+        "Metadata": {
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true",
+          "Duende.Bff.Yarp.TokenType": "User"
+        }
+      },
       "SchedulingApiRoute": {
         "ClusterId": "SchedulingApiCluster",
         "Match": {
-          "Path": "/api/{**catch-all}"
+          "Path": "/sa/{**catch-all}"
         },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/sa"
+          }
+        ],
+        "Metadata": {
+          "Duende.Bff.Yarp.AntiforgeryCheck": "true",
+          "Duende.Bff.Yarp.TokenType": "User"
+        }
+      },
+      "SchedulingNotificationsApiRoute": {
+        "ClusterId": "SchedulingNotificationsApiCluster",
+        "Match": {
+          "Path": "/sna/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/sna"
+          }
+        ],
         "Metadata": {
           "Duende.Bff.Yarp.AntiforgeryCheck": "true",
           "Duende.Bff.Yarp.TokenType": "User"
@@ -57,10 +92,48 @@
       }
     },
     "Clusters": {
+      "SchedulingAccessTokenCluster": {
+        "Destinations": {
+          "ClinicManagementApiDestination": {
+            "Address": "https://localhost:7154/api"
+          }
+        }
+      },
       "SchedulingApiCluster": {
         "Destinations": {
           "SchedulingApiDestination": {
-            "Address": "https://localhost:7266"
+            "Address": "https://localhost:7266/api"
+          }
+        }
+      },
+      "SchedulingNotificationsApiCluster": {
+        "Destinations": {
+          "SchedulingApiDestination": {
+            "Address": "https://localhost:7183/api"
+          }
+        }
+      }
+    }
+  },
+  "ReverseProxyForNotificationHubSignalr": {
+    "Routes": {
+      "SchedulingApiNotificationHubRoute": {
+        "ClusterId": "SchedulingNotificationHubCluster",
+        "Match": {
+          "Path": "/notificationhub/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/notificationhub"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "SchedulingNotificationHubCluster": {
+        "Destinations": {
+          "SchedulingNotificationsApiDestination": {
+            "Address": "https://localhost:7082/notificationhub"
           }
         }
       }
