--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/appsettings.Development.json
@@ -1,10 +1,19 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "ApplicationUrl": "https://localhost:7154",
   "BackendForFrontendSetting": {
-    "LocalEndpointToRouteRemoteApiByReverseProxy": "api",
     "SecondsToCheckAuthenticationStateDuetime": 1,
     "SecondsToCheckAuthenticationStatePeriod": 60,
-    "SecondsToRefreshUserCache": 60
+    "SecondsToRefreshUserCache": 60,
+    "SuffixRouteForAccessToken": "sat",
+    "SuffixRouteForSchedulingApi": "sa",
+    "SuffixRouteForSchedulingNotificationsApi": "sna",
+    "SuffixRouteForSchedulingNotificationsHub": "notificationhub"
   },
   "CookieSetting": {
     "UserSettingsKey": "userSettings"
