Add missed required role for RequiredWriterPolicy into appsettings in Scheduling.Api #27

--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -58,7 +58,8 @@
           }
         ],
         "RequiredRoles": [
-          "Manager"
+          "Manager",
+          "Staff"
         ]
       }
     ]
