--- a/SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/appsettings.Development.json
+++ b/SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/appsettings.Development.json
@@ -3,6 +3,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SchedulingEmailSender;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "EmailTemplateSetting": {
+    "UrlQueryToConfirmAppointment": "https://localhost:7138/appointment/confirm?id={0}&language={1}"
+  },
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
   },
