Add package reference MassTransit.RabbitMQ version 8.0.13 in Public.Web #27

--- a/Public/src/Fnunez.VeterinaryClinic.Public.Web/Fnunez.VeterinaryClinic.Public.Web.csproj
+++ b/Public/src/Fnunez.VeterinaryClinic.Public.Web/Fnunez.VeterinaryClinic.Public.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
+  </ItemGroup>
+
 </Project>
