RabbitMqSetting in Public.Web #27

--- a/Public/src/Fnunez.VeterinaryClinic.Public.Web/appsettings.Development.json
+++ b/Public/src/Fnunez.VeterinaryClinic.Public.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "RabbitMqSetting": {
+    "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
