--- a/Public/src/Fnunez.VeterinaryClinic.Public.Web/appsettings.Development.json
+++ b/Public/src/Fnunez.VeterinaryClinic.Public.Web/appsettings.Development.json
@@ -2,6 +2,13 @@
   "RabbitMqSetting": {
     "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
   },
+  "SymmetricEncryptionSetting": {
+    "HashAlgorithmName": "SHA256",
+    "Iterations": 100,
+    "OutputLength": 16,
+    "Password": "Password",
+    "Salt": "Salt"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
