Add EmailSetting into appsettings in EmailService.Api #27

--- a/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/appsettings.Development.json
+++ b/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "EmailSetting": {
+    "EnableSsl": true,
+    "From": "noreply@mydomain.com",
+    "Host": "smtp.mydomain.com",
+    "Password": "password",
+    "Port": 587,
+    "SmtpDeliveryMethod": "Network",
+    "UserName": "username"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
