Add Retry properties into EmailSetting in EmailService.Api #27

--- a/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/appsettings.Development.json
+++ b/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/appsettings.Development.json
@@ -5,6 +5,8 @@
     "Host": "smtp.mydomain.com",
     "Password": "password",
     "Port": 587,
+    "RetryCount": 3,
+    "RetryTimeInSeconds": 5,
     "SmtpDeliveryMethod": "Network",
     "UserName": "username"
   },
