--- a/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/Fnunez.VeterinaryClinic.EmailService.Api.csproj
+++ b/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/Fnunez.VeterinaryClinic.EmailService.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
