RabbitMqSetting in EmailService.Api #27

--- a/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/appsettings.Development.json
+++ b/EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/appsettings.Development.json
@@ -10,6 +10,9 @@
     "SmtpDeliveryMethod": "Network",
     "UserName": "username"
   },
+  "RabbitMqSetting": {
+    "HostAddress": "amqp://guest:guest@127.0.0.1:5672/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
