Add IdentityServerSettings into appsettings in Identity.Api #29

--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.Development.json
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.Development.json
@@ -4,6 +4,14 @@
     "IdentityConnection": "Server=localhost;Database=Identity;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True",
     "IdentityServerConnection": "Server=localhost;Database=IdentityServer;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "IdentityServerSetting": {
+    "EmitStaticAudienceClaim": true,
+    "IssuerUri": "https://localhost:7066",
+    "RaiseErrorEvents": true,
+    "RaiseFailureEvents": true,
+    "RaiseInformationEvents": true,
+    "RaiseSuccessEvents": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
