--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -28,8 +28,11 @@
     "ClientSecret": "secret",
     "EnabledGetClaimsFromUserInfoEndpoint": true,
     "EnabledMapInboundClaims": false,
+    "EnabledRequireHttpsMetadata": true,
     "EnabledSaveTokens": true,
     "EnabledUsePkce": true,
+    "EnabledValidateAudience": true,
+    "MetadataAddress": "https://localhost:7066/.well-known/openid-configuration",
     "ResponseMode": "query",
     "ResponseType": "code",
     "Scopes": [
