CookiePolicySetting into Identity.Api #29

--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.DockerDevelopment.json
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.DockerDevelopment.json
@@ -4,6 +4,9 @@
     "IdentityConnection": "Server=identity-db;Database=Identity;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true",
     "IdentityServerConnection": "Server=identity-db;Database=IdentityServer;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true"
   },
+  "CookiePolicySetting": {
+    "MinimumSameSitePolicy": "Lax"
+  },
   "IdentityServerSetting": {
     "EmitStaticAudienceClaim": true,
     "IssuerUri": "https://identity-api.vc.local:7066",
