--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.Development.json
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.Development.json
@@ -4,6 +4,9 @@
     "IdentityConnection": "Server=localhost;Database=Identity;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True",
     "IdentityServerConnection": "Server=localhost;Database=IdentityServer;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "CookiePolicySetting": {
+    "MinimumSameSitePolicy": "Lax"
+  },
   "IdentityServerSetting": {
     "EmitStaticAudienceClaim": true,
     "IssuerUri": "https://localhost:7066",
