DeploymentSetting in ClinicManagement.BlazorClient.Server #29

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.Development.json
@@ -16,6 +16,11 @@
     "ClinicManagementNotificationsApiUrl": "https://localhost:7082",
     "IdentityServerUrl": "https://localhost:7066"
   },
+  "DeploymentSetting": {
+    "EnvironmentName": "Development",
+    "WellKnownHttpHeaderReplacement": "",
+    "WellKnownHttpHeaderToReplace": ""
+  },
   "OpenIdConnectSetting": {
     "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
