--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.DockerDevelopment.json
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/appsettings.DockerDevelopment.json
@@ -16,6 +16,11 @@
     "ClinicManagementNotificationsApiUrl": "https://clinicmanagementnotifications-api:7082",
     "IdentityServerUrl": "https://identity-api.vc.local:7066"
   },
+  "DeploymentSetting": {
+    "EnvironmentName": "DockerDevelopment",
+    "WellKnownHttpHeaderReplacement": "",
+    "WellKnownHttpHeaderToReplace": ""
+  },
   "OpenIdConnectSetting": {
     "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
