RequireHttpsMetadata property into AuthenticationSetting in ClinicManagement.Api #29

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.DockerDevelopment.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.DockerDevelopment.json
@@ -13,6 +13,7 @@
     "Audience": "7e2593ba-e3cd-40e5-a50e-506877d0210e",
     "Authority": "https://identity-api.vc.local:7066",
     "DefaultScheme": "Bearer",
+    "RequireHttpsMetadata": true,
     "ValidateAudience": true
   },
   "AuthorizationSetting": {
