--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.DockerDevelopment.json
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/appsettings.DockerDevelopment.json
@@ -7,6 +7,7 @@
     "Audience": "09cb5cff-f1fa-4f5f-aa26-d39f9b63b0d6",
     "Authority": "https://identity-api.vc.local:7066",
     "DefaultScheme": "Bearer",
+    "RequireHttpsMetadata": true,
     "ValidateAudience": true
   },
   "AuthorizationSetting": {
