DeploymentSetting in Scheduling.BlazorClient.Server #29

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.Development.json
@@ -16,6 +16,11 @@
     "SchedulingApiUrl": "https://localhost:7266",
     "SchedulingNotificationsApiUrl": "https://localhost:7183"
   },
+  "DeploymentSetting": {
+    "EnvironmentName": "Development",
+    "WellKnownHttpHeaderReplacement": "",
+    "WellKnownHttpHeaderToReplace": ""
+  },
   "OpenIdConnectSetting": {
     "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
