--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.DockerDevelopment.json
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/appsettings.DockerDevelopment.json
@@ -16,6 +16,11 @@
     "SchedulingApiUrl": "https://scheduling-api:7266",
     "SchedulingNotificationsApiUrl": "https://schedulingnotifications-api:7183"
   },
+  "DeploymentSetting": {
+    "EnvironmentName": "DockerDevelopment",
+    "WellKnownHttpHeaderReplacement": "",
+    "WellKnownHttpHeaderToReplace": ""
+  },
   "OpenIdConnectSetting": {
     "AccessDeniedPath": "/login",
     "AuthenticationScheme": "oidc",
