--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -13,6 +13,7 @@
     "Audience": "87fd9858-661d-409e-810b-86055039bcce",
     "Authority": "https://localhost:7066",
     "DefaultScheme": "Bearer",
+    "RequireHttpsMetadata": true,
     "ValidateAudience": true
   },
   "AuthorizationSetting": {
