Fix Dockerfile in Scheduling.Api #29

--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Dockerfile
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Dockerfile
@@ -23,5 +23,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
-# RUN bash -c 'sleep 10'
-# ENTRYPOINT ["dotnet", "Fnunez.VeterinaryClinic.Scheduling.Api.dll"]
+ENTRYPOINT ["dotnet", "Fnunez.VeterinaryClinic.Scheduling.Api.dll"]
